# adtech-agent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.json  llms-install.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
adtech_crosswalk/: build_index.py  loader.py  search.py  server.py  sync_data.py
docs/superpowers/plans/: 2026-05-15-adtech-taxonomy-mapping.md
docs/superpowers/specs/: 2026-05-15-adtech-taxonomy-mapping-design.md
integrations/: README.md
mappings/ad_product/google_latest__iab_v1.0/: mapping.json
mappings/ad_product/iab_v1.0__google_latest/: mapping.json
scripts/: convert_iab_tsv.py  generate_iab_v2_google_mapping.py  invert_mapping.py  validate.py
scripts/generate/: generate_iab_v1_google_mapping.py
scripts/ingest/: convert_google_txt.py  convert_iab_tsv.py  ingest_freewheel.py  ingest_iab.py  ingest_xandr.py  utils.py
taxonomies/ad_product/freewheel/latest/: taxonomy.search-index.json
taxonomies/ad_product/google/latest/: taxonomy.json
taxonomies/ad_product/iab/v1.0/: taxonomy.json  taxonomy.search-index.json
taxonomies/ad_product/iab/v1.1/: taxonomy.json  taxonomy.search-index.json
taxonomies/ad_product/iab/v2.0/: taxonomy.json  taxonomy.search-index.json
taxonomies/ad_product/xandr/latest/: taxonomy.json  taxonomy.search-index.json
taxonomies/audience/iab/v1.0/: taxonomy.search-index.json
tests/: conftest.py  test_build_index.py  test_ingest_freewheel.py  test_ingest_iab.py  test_ingest_utils.py  test_ingest_xandr.py  test_loader.py  test_search.py  test_server.py
(+26 files in other folders)
