[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adtech-crosswalk"
version = "0.1.0"
description = "Cross-provider AdTech taxonomy mappings via MCP — the Context7 for AdTech"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
]

[project.scripts]
adtech-crosswalk = "adtech_crosswalk.server:main"
adtech-crosswalk-sync = "adtech_crosswalk.sync_data:main"
adtech-crosswalk-build-index = "adtech_crosswalk.build_index:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["adtech_crosswalk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
